--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,8 @@
-.hidden{
-  display:none;
-}
 
-html{
-  font-family: 'Roboto', sans-serif;
+html {
+  font-family: "Roboto", sans-serif;
   border: none;
 }
-
 nav {
   display: flex;
   height: 20%;
@@ -14,115 +10,133 @@ nav {
   justify-content: space-between;
   align-items: flex-end;
   padding-left: 2%;
- 
 }
-body{
+body {
   background-color: rgb(219, 215, 215);
   border: 0;
   margin: 0;
 }
-a{
+a {
   padding-top: 4px;
 }
-h1{
+h1 {
   padding-left: 8px;
 }
-main{
+main {
   margin: 5px;
-} 
-.estimate{
+}
+.estimate {
   color: antiquewhite;
 }
 
-.page-title{
-  color:rgb(9, 202, 236);
+.page-title {
+  color: rgb(9, 202, 236);
   font-weight: 600;
   font-size: 30px;
-
 }
-.total-amount{
-  color:rgb(219, 215, 215);
+.total-amount {
+  color: rgb(219, 215, 215);
   font-weight: 600;
 }
-.card-container:hover{
+.card-container:hover {
   transform: scale(1.05);
 }
-.card-container{
-   transition: all .2s ease-in-out;
-   background-color: rgba(252, 249, 249, 0.857);
-   width: 18vw;
-   height: 50vh;
-   contain: content;
-   margin: 5px;
-   box-shadow: 4px 4px  #6c6b6b;
+.card-container {
+  transition: all 0.2s ease-in-out;
+  background-color: rgba(252, 249, 249, 0.857);
+  width: 18vw;
+  height: 50vh;
+  contain: content;
+  margin: 5px;
+  box-shadow: 4px 4px #6c6b6b;
 }
-.card-top{
+.card-top {
   height: 25vh;
   contain: content;
   position: relative;
 }
-.card-bottom{
+.card-bottom {
   height: 20vh;
-  contain: content; 
+  contain: content;
   padding: 8px;
 }
-.card-section{
+.card-section {
   display: flex;
   flex-direction: row;
   contain: content;
   margin-top: 20px;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
-.destination-name{
+.destination-name {
   font-size: 18px;
   margin: 0;
   color: black;
   font-weight: 600;
 }
 
-.card-image{
+.card-image {
   height: 100%;
-  width: auto;
+  width: 100%;
 }
 
-.nav-bar{
+.nav-bar {
   display: flex;
   flex-direction: column;
 }
 
-button:hover{
+button:hover {
   cursor: pointer;
   background-color: #949292;
 }
-button{
-  transition: all .2s ease-in-out;
+button {
+  transition: all 0.2s ease-in-out;
   display: flex;
   align-items: center;
   margin-bottom: 15px;
   border: none;
-  height:30px;
+  height: 30px;
   width: 150px;
   background-color: #232323;
-  color: white ;
+  color: white;
   align-content: center;
   text-align: center;
   font-size: 12px;
 }
-.nav-icon{
+.nav-icon {
   width: 20px;
   height: 20px;
   margin-right: 10px;
 }
 
-.nav-bar-left{
+.nav-bar-left {
   display: flex;
   flex-direction: column-reverse;
   align-content: flex-end;
   align-items: flex-end;
   contain: content;
-  height: 100%;;
+  height: 100%;
   margin: 10px;
+}
+.input-form{
+  display: inline-block;
+  align-items: baseline;
+  background-color: #6c6b6b;
+}
+.input-form:valid{
+  border: 2px green;
+}
+.log-in-container{
+display: flex;
+justify-content: space-around;
+margin-top: 100px;
+}
+
+
+
+
+.hidden {
+  display: none;
 }
