--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -69,22 +69,29 @@ main {
   justify-content: center;
   flex-wrap: wrap;
 }
+.card-label{
+  font-size: 10px;
+  color: #6c6b6b;
+  margin: 0;
+}
 
 .destination-name {
   font-size: 18px;
   margin: 0;
   color: black;
   font-weight: 600;
+  margin-bottom: 5px;
+}
+.destination-date{
+  margin-top: 0;
+}
+.destination-status{
+  margin-top: 0;
 }
 
 .card-image {
   height: 100%;
   width: 100%;
-}
-
-.nav-bar {
-  display: flex;
-  flex-direction: column;
 }
 
 button:hover {
@@ -134,9 +141,6 @@ justify-content: space-around;
 margin-top: 100px;
 }
 
-
-
-
-.hidden {
+.hidden{
   display: none;
 }
