Add error handle for incorrect password

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -140,6 +140,10 @@ display: flex;
 justify-content: space-around;
 margin-top: 100px;
 }
+.error{
+  color: red;
+  font: 12px;
+}
 
 .hidden{
   display: none;
